.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v3/classSelfMismatch_contextTag.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/classSelfMismatch_contextTag.ts(12,71): error TS377046: The `Self` type parameter for this class should be `InvalidContextTag`. effect(classSelfMismatch)


==== /.src/classSelfMismatch_contextTag.ts (1 errors) ====
    // @effect-v3
    import * as Context from "effect/Context"
    
    interface ServiceShape {
      value: number
    }
    
    // valid usage: <ValidContextTag, ServiceShape> is correct because the Self type parameter is the same as the class name
    export class ValidContextTag extends Context.Tag("ValidContextTag")<ValidContextTag, ServiceShape>() {}
    
    // invalid usage: <ValidContextTag, ServiceShape> should be <InvalidContextTag, ServiceShape> because the Self type parameter is not the same as the class name
    export class InvalidContextTag extends Context.Tag("ValidContextTag")<ValidContextTag, ServiceShape>() {}
                                                                          ~~~~~~~~~~~~~~~
!!! error TS377046: The `Self` type parameter for this class should be `InvalidContextTag`. effect(classSelfMismatch)
    
